FINERACT-1782: Improve code quality - Member of Spring components should be injected